--- a/templates/index.html
+++ b/templates/index.html
@@ -40,7 +40,7 @@
         </thead>
     
         <tbody >
-            {% for book in data %}
+            {% for book in pages.items %}
                 <tr>
                     <th scope="row">{{ loop.index}}</th>
                     <td>{{ book.name }}</td>
@@ -56,6 +56,26 @@
             {% endfor%}
         </tbody>
     </table>
+
+<!-- pagination -->
+<nav aria-label="...">
+        <ul class="pagination">
+          <li class="page-item {% if not pages.has_prev %} disabled {% endif %}">
+            <a class="page-link" href="./?page={{ pages.prev_num}}">Previous</a>
+          </li>
+
+          {% for page in pages.iter_pages() %} 
+          <li class="page-item {% if page == pages.page %} active {% endif %}">
+            <a class="page-link" href="./?page={{ page }}">{{ page }} <span class="sr-only">(current)</span></a>
+          </li>
+          {% endfor %}
+
+        
+          <li class="page-item {% if not pages.has_next %} disabled {% endif %} ">
+            <a class="page-link" href="./?page={{ pages.next_num}}">Next</a>
+          </li>
+        </ul>
+      </nav>
 
 {% endblock %}
 
